--- a/yalta/xn--80afufmnqf3i.xn--c1acljkkgk2a2f.online/src/styles/card.css
+++ b/yalta/xn--80afufmnqf3i.xn--c1acljkkgk2a2f.online/src/styles/card.css
@@ -43,11 +43,14 @@
 }
 
 .media-container {
+  width: 80%;
   position: relative;
+  border-radius: 3px;
 }
 
 .card__img {
   width: 100%;
+  border-radius: 3px;
 }
 
 .card__name {
